# prefilter-api

./: .dockerignore  .gitignore  Anomalie_Tests_erweitert.csv  Dockerfile  README.md  app.py  docker-compose.yml  dockerignore  main.py  prefilter_todo.txt  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
modules/: engine.py  parser.py  webhook.py
src/: accounting.py  charts.py  config.py  embeddings.py  engine.py  feedback.py  feedback_stats.py  file_store.py  history.py  kreditor_clustering.py  logging_config.py  main.py  models.py  parser.py  trainer.py  validator.py  webhook.py  worker.py
src/tests/: base.py  betrag.py  buchungslogik.py  duplikate.py  isolation_anomaly.py  kreditor.py  text_konto_match.py  zeitreihe.py
tests/: conftest.py  test_charts.py  test_embeddings.py  test_engine.py  test_feedback.py  test_integration.py  test_performance.py  test_realdata.py  test_worker_parallel.py
