[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prefilter-api"
version = "4.0.0"
requires-python = ">=3.12"
dependencies = [
    "gradio==4.36.1",
    "gradio_client==1.0.1",
    "httpx==0.27.2",
    "pydantic==2.7.4",
    "requests>=2.31.0",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    # Phase 1 — async infra (added when Phase 1 is activated)
    # "fastapi>=0.111.0",
    # "uvicorn[standard]>=0.30.0",
    # "celery[redis]>=5.4.0",
    # "redis>=5.0.0",
    # "python-multipart>=0.0.9",
]

[project.optional-dependencies]
async = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest==8.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "modules*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
