[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "prefilter-api"
version = "4.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.12.0",
    "httpx==0.27.2",
    "pydantic>=2.7.4",
    "requests>=2.31.0",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "openpyxl==3.1.5",
    "xlrd==2.0.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "pyarrow>=15.0.0",
    "plotly>=5.20.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: Performance-Tests mit großen Datensätzen (500k Zeilen)",
    "integration: Integration-Tests die Redis/Celery voraussetzen",
]
addopts = "-m 'not slow and not integration'"
